2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Bundles/Timidity/Timidity.m
	Set default endianness to native.

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Bundles/WindowsMedia/WindowsMedia.m
	Set endianness to native.

2012-05-13 Riccardo Mottola <rm@gnu.org>

	* Player.h
	* Player.m
	* Bundles/ALSA/ALSA.h
	* Bundles/ALSA/ALSA.m
	* Bundles/AO/ao.m
	* Bundles/AudioFile/AudioFile.m
	* Bundles/MP3/MP3.m
	* Bundles/OSS/OSS.h
	* Bundles/OSS/OSS.m
	* Bundles/WindowsMedia/WindowsMedia.m
	* Frameworks/Cynthiune/Format.h
	* Frameworks/Cynthiune/Output.h
	Set media-endianness in media and output bundle.

2012-05-09 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* GNUmakefile
        fix detection of OpenBSD in order to build the Sndio bundle

2012-05-09 Riccardo Mottola <rm@gnu.org>

	* PlaylistController.m
	Remove hacks and use runModalForTypes.

2012-05-09 Riccardo Mottola <rm@gnu.org>

	* PlaylistController.h
	* PlaylistController.m
	* Cynthiune.gorm
	* English.lproj/Localizable.strings
	Implement open playlist

2012-05-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/AO/ao.m fix crasher when jumping automatically
	  from one song to the next which have different bit rates
	  patch from Philippe Roussel

2012-05-05 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/Sndio/Sndio.m Force to use little endian
	  format, to make it work on Big Endian architectures

2012-05-05 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Bundles/AO/ao.m fix resetting of audio parameters
	  when automatically jumping to next song with different
	  bit rate. Further, use AO_FMT_LITTLE, to fix output
	  on big endian systems, i.e. PowerPC. From Philippe
	  Roussel, Thanks!

2012-05-04 Riccardo Mottola <rm@gnu.org>

	* GeneralPreference.m
	When reading preferences, transform in a mutable dictionary since that is what we expect.

	* SongInspectorController.m