@@ -1,3 +1,12 @@
+2012-05-13 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+
+	* Bundles/Timidity/Timidity.m
+	Default enianness needs to be native, otherwise 
+	macppc play garbage
+	Use relative name to find timidity binary
+	Switch buffer size from 65536 to DEFAULT_BUFFER_SIZE
+	defined in Output.h
+
 2012-05-13 Riccardo Mottola <rm@gnu.org>
 
 	* Bundles/Timidity/Timidity.m
